fixed horizontal scroll bar

--- a/src/client/styles/headerDesktop.scss
+++ b/src/client/styles/headerDesktop.scss
@@ -2,10 +2,11 @@
   header {
     justify-content: start;
     align-items: center;
-    padding-top: 1em;
-    padding-bottom: 1em;
+    padding-left: 0;
+    padding-right: 0;
 
     img {
+      margin-left: 2em;
       width: 10em;
       height: 8em;
     }
