--- a/src/client/styles/mainDesktop.scss
+++ b/src/client/styles/mainDesktop.scss
@@ -1,5 +1,7 @@
 @media screen and (min-width: 1281px) {
   main {
+    padding-left: 0;
+    padding-right: 0;
 
     section#user-entry-data-block {
       flex-direction: row;
